add header to map

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,12 @@
     </style>
   </head>
   <body>
-    <section id="map" class="map"></section>
+    <section class="map">
+      <header>
+        <h1>Location</h1>
+      </header>
+      <div id="map"></div>
+    </section>
     <section class="calculators">
     </section>
     <script src="map/index.js"></script>
