--- a/popup.html
+++ b/popup.html
@@ -16,8 +16,15 @@
       <div id="map"></div>
     </section>
     <section class="calculators">
+      <header>
+        <h1>Estimates</h1>
+      </header>
     </section>
+    <!-- Create the initMap call back function MUST be loaded before the Map script -->
     <script src="map/index.js"></script>
+    <!-- Load Google Map script -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWPI5u-0PCJdJigHMTqZxPkCh827XGSIM&callback=initMap"></script>
+    <!-- Handlebars script -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js" integrity="sha256-dlwklXLDib5XGMYI+HdNEXczJXTsFtq+qIrSdXoCv6o=" crossorigin="anonymous"></script>
   </body>
 </html>
