--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <style>
+      header h1 {
+        border-bottom: 1px solid lightgray;
+      }
+
       #map {
         height: 300px;
         width: 500px;
@@ -18,14 +22,31 @@
     <section class="calculators">
       <header>
         <h1>Estimates</h1>
-        <div class="payment"></div>
       </header>
+      <div class="monthly-payments">
+        <div id="principle" class="line-items">
+          <div class="key">Principle and Interest</div>
+          <div class="value"></div>
+        </div>
+        <div id="association" class="line-items">
+          <div class="key">Association Fees</div>
+          <div class="value"></div>
+        </div>
+        <div id="taxes" class="line-items">
+          <div class="key">Taxes</div>
+          <div class="value"></div>
+        </div>
+        <div id="total" class="line-items">
+          <div class="key">Total</div>
+          <div class="value"></div>
+        </div>
+      </div>
     </section>
     <!-- Create the initMap call back function MUST be loaded before the Map script -->
     <script src="map/index.js"></script>
     <!-- Load Google Map script -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWPI5u-0PCJdJigHMTqZxPkCh827XGSIM&callback=initMap"></script>
-    <!-- Calculator -->
+    <!-- Calculators -->
     <script src="calculator/payment.js"></script>
   </body>
 </html>
