update name from calculators to estimates

--- a/popup.html
+++ b/popup.html
@@ -46,7 +46,8 @@
     <script src="map/index.js"></script>
     <!-- Load Google Map script -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWPI5u-0PCJdJigHMTqZxPkCh827XGSIM&callback=initMap"></script>
-    <!-- Calculators -->
-    <script src="calculator/payment.js"></script>
+    <!-- Estimatens -->
+    <script src="eeimates/payment.js"></script>
+    <script src="estimates/payment.js"></script>
   </body>
 </html>
