updated header for estimation area

--- a/popup.html
+++ b/popup.html
@@ -27,7 +27,7 @@
     </section>
     <section class="calculators">
       <header>
-        <h1>Estimates</h1>
+        <h1>Estimated Monthly Expenses</h1>
       </header>
       <div class="monthly-payments">
         <div id="payment" class="line-items">
