correct typo in html comment

--- a/popup.html
+++ b/popup.html
@@ -63,7 +63,7 @@
     <script src="map/index.js"></script>
     <!-- Load Google Map script -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWPI5u-0PCJdJigHMTqZxPkCh827XGSIM&callback=initMap"></script>
-    <!-- Estimatens -->
+    <!-- Estimations -->
     <script src="estimates/calculations.js"></script>
     <script src="estimates/index.js"></script>
   </body>
